--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "root",
-    "password": "fenrir32",
-    "database": "projecttwo",
-    "host": "localhost",
+    "username": "b2d8052a5cc13c",
+    "password": "14c8247c",
+    "database": "heroku_cd0896e944c1168",
+    "host": "us-cdbr-iron-east-03.cleardb.net",
     "dialect": "mysql"
   },
   "test": {
@@ -15,7 +15,7 @@
     "logging": false
   },
   "production": {
-    "use_env_variable": "JAWSDB_URL",
+    "use_env_variable": "CLEARDB_DATABASE_URL",
     "dialect": "mysql"
   }
 }
