--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,11 @@
 {
   "development": {
-    "username": "root",
-    "password": "fenrir32",
-    "database": "projecttwo",
-    "host": "localhost",
-    "dialect": "mysql"
-  },
+  "username": "b2d8052a5cc13c",
+  "password": "14c8247c",
+  "database": "heroku_cd0896e944c1168",
+  "host": "us-cdbr-iron-east-03.cleardb.net",
+  "dialect": "mysql"
+},
   "test": {
     "username": "root",
     "password": null,
