--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@microlink/vanilla": "^3.0.5",
     "bcrypt-nodejs": "0.0.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.3",
