--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@microlink/vanilla": "^3.0.5",
     "bcrypt-nodejs": "0.0.3",
     "dotenv": "^6.2.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "eslint": "^5.16.0",
     "mocha": "^5.2.0",
     "prettier": "^1.13.7"
   }
