added profile page/color message bubbles

--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,10 @@
 {
-    "development": {
-      "username": "root",
-      "password": null,
-      "database": "projecttwo",
-      "host": "localhost",
-      "dialect": "mysql"
+  "development": {
+    "username": "b2d8052a5cc13c",
+    "password": "14c8247c",
+    "database": "heroku_cd0896e944c1168",
+    "host": "us-cdbr-iron-east-03.cleardb.net",
+    "dialect": "mysql"
   },
   "test": {
     "username": "root",
