--- a/config/config.json
+++ b/config/config.json
@@ -1,15 +1,15 @@
 {
-  "development": {
+  "test": {
     "username": "b2d8052a5cc13c",
     "password": "14c8247c",
     "database": "heroku_cd0896e944c1168",
     "host": "us-cdbr-iron-east-03.cleardb.net",
     "dialect": "mysql"
   },
-  "test": {
+  "development": {
     "username": "root",
-    "password": null,
-    "database": "testdb",
+    "password": "fenrir32",
+    "database": "projectTwo",
     "host": "localhost",
     "dialect": "mysql",
     "logging": false
